# smart-course

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/ai/: graph.py  llm.py  qa.py  retrieval.py
app/api/: deps.py  router.py
app/api/v1/: assistant.py  auth.py  (+5 more)
app/core/: config.py  logging.py  observability.py  security.py
app/db/: mongo.py  postgres.py  qdrant.py  redis.py
app/events/: producer.py  run_consumers.py  topics.py
app/models/: __init__.py  base.py  certificate.py  course.py  enrollment.py  enums.py  lesson_completion.py  notification.py  progress.py  user.py
app/schemas/: __init__.py  assistant.py  auth.py  course.py  enrollment.py  notification.py  user.py
app/services/: analytics.py  courses.py  enrollments.py  exceptions.py  notifications.py  users.py
app/tasks/: celery_app.py  dispatch.py  emailer.py  notifications.py
app/workflows/: activities.py  client.py  enrollment.py  publishing.py  worker.py
docker/otel/: otel-collector-config.yaml
docker/prometheus/: prometheus.yml
docs/: PRD.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: env.py
requests/: core_journey.http
scripts/: seed.py  seed_academy.py  seed_chess.py
tests/: conftest.py  factories.py  test_api.py  test_archive_unenroll.py  test_assistant.py  test_content.py  test_content_gating.py  test_course_update_reconcile.py  test_courses.py  test_enrollment_workflow.py  test_enrollments.py  test_health.py  test_learning_paths.py  test_lesson_completions.py  test_notifications.py  test_notifications_feed.py
(+37 files in other folders)
