[project]
name = "smartcourse"
version = "0.1.0"
description = "SmartCourse — intelligent course delivery backend"
requires-python = ">=3.10"
dependencies = [
  # --- Web / API ---
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.3",
  # --- PostgreSQL (source of truth) ---
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  # --- MongoDB (content documents / denormalized analytics) ---
  "motor>=3.4",
  # --- Redis (cache, rate limiting, celery backend) ---
  "redis>=5.0",
  # --- Vector DB (RAG retrieval) ---
  "qdrant-client>=1.9",
  # --- Kafka + Schema Registry (domain events) ---
  "confluent-kafka[avro,schemaregistry]>=2.4",
  # --- Celery + RabbitMQ (async tasks) ---
  "celery>=5.4",
  # --- Temporal (durable workflows) ---
  "temporalio>=1.6",
  # --- AI: LangGraph + Anthropic (default provider, pluggable) ---
  "langgraph>=0.1",
  "langchain-core>=0.2",
  "langchain-anthropic>=0.1",
  "anthropic>=0.30",
  # --- Observability ---
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
  "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
